--- a/css/components/card.css
+++ b/css/components/card.css
@@ -1,6 +1,6 @@
 .round-card {
   border-radius: 16px;
-  height: 40vh;
+  min-height: 40vh;
   border: 8px solid white;
   box-shadow: 0 0 8px rgba(0, 0, 0, .2);
   position: relative;
@@ -14,23 +14,12 @@
   text-shadow: 0 0 16px rgba(0, 0, 0, .1);
 }
 
-
-
-.round-card > .emoji {
+.round-card > .icon-more {
   position: absolute;
+  color: white;
   right: 16px;
   bottom: 0;
-  font-size: 32px;
-  transition: .3s;
-  opacity: 0;
-}
-
-.round-card:hover > .emoji {
-  position: absolute;
-  right: 16px;
-  bottom: 0;
-  font-size: 32px;
-  transition: .3s;
+  font-size: 24px;
   opacity: 1;
 }
 
@@ -38,7 +27,6 @@
   padding-bottom: 4px;
   border-bottom: 2px solid white;
 }
-
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
@@ -77,5 +65,26 @@
     opacity: 1;
     transition: .3s;
     transform: translateY(0px);
+  }
+
+  .round-card > .icon-more {
+    position: absolute;
+    color: white;
+    right: 16px;
+    bottom: 0;
+    font-size: 24px;
+    transition: .3s;
+    opacity: 0;
+  }
+
+  .round-card:hover > .icon-more {
+    transition: .3s;
+    opacity: .6;
+  }
+
+  .round-card > .icon-more:hover {
+    transition: .3s;
+    opacity: 1;
+    transform: scale(1.1);
   }
 }
