--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
 
 /* components */
 @import "components/index.css";
+@import 'components/card.css';
+@import 'components/grid.css';
+@import 'components/navbar.css';
+@import 'components/avatar.css';
+@import 'components/button.css';
+@import 'components/modal.css';
 
 /* general */
 
