--- a/css/components/card.css
+++ b/css/components/card.css
@@ -87,7 +87,15 @@
   .round-card > .icon-more:hover {
     transition: .3s;
     opacity: 1;
+    cursor: pointer;
     transform: scale(1.1);
+  }
+
+  .round-card > .icon-more:focus-visible {
+    transition: .3s;
+    opacity: 1;
+    transform: scale(1.1);
+    outline: none;
   }
 }
 
