--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,7 @@ body {
 h2, h1, h3, h4 {
   font-family: 'Montserrat', sans-serif !important;
 }
+
+.name {
+  font-size: calc(1.375rem + 1.5vw);
+}
