--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,49 @@
-/* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik&display=swap');
 
-/* components */
-/* @import "components/index.css"; */
-@import 'components/card.css';
-@import 'components/grid.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&display=swap');
+
+@import 'components/square-cards.css';
 @import 'components/navbar.css';
-@import 'components/avatar.css';
-@import 'components/button.css';
-@import 'components/modal.css';
-@import 'components/footer.css';
-@import 'components/banner.css';
+@import 'components/btn.css';
+@import 'components/window.css';
 
-/* general */
+:root {
+  --black: rgb(90,90,90);
+  --spacing: 8px;
+}
 
 body {
-  font-family: 'Rubik', sans-serif !important;
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing);
+  margin: 0;
+  padding: var(--spacing);
+  font-family: monospace;
+  color: var(--black);
+  overflow: hidden;
+}
+
+.bg {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-image: linear-gradient(0deg, rgba(230, 230, 230, 1) 10%, rgba(255, 255, 255, 0.7) 40%), url('../images/IMG_20210101_071313.jpg') !important;
   background-color: rgb(230, 230, 230);
   background-size: cover;
   background-position: center;
 }
 
-h2, h1, h3, h4 {
-  font-family: 'Montserrat', sans-serif !important;
+h1 {
+  margin: 0;
 }
 
-.name {
-  font-size: calc(1.375rem + 1.5vw);
+a {
+  color: var(--black);
+}
+
+img {
+  height: 100%;
+  width: auto;
 }
