adding new project

--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -1,15 +1,18 @@
 #navbar {
-  background-color: white;
+  background-color: var(--accent-color);
   padding: var(--spacing);
   border-radius: var(--spacing);
   display: flex;
   justify-content: space-between;
   position: relative;
   z-index: 1;
+  height: calc(var(--spacing) * 6);
 }
 
-#navbar #logo {
-  height: 48px;
+#logo {
+  background: whitesmoke;
+  padding: 2px;
+  border-radius: 4px;
 }
 
 #navbar ul {
@@ -22,74 +25,52 @@
 }
 
 #navbar ul li {
-  height: 100%;
+  height: calc(var(--spacing) * 6);
+  width: 100%;
+  letter-spacing: .2rem;
 }
 
+#navbar ul li button { width: inherit; }
+
 .nav-item {
-  height: 48px;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 var(--spacing);
-  border-radius: var(--spacing);
-  box-shadow: inset 0 0 0 2px var(--black);
   text-decoration: none;
   font-size: 1rem;
 }
 
-.nav-item:hover {
-  box-shadow: inset 0 0 0 4px var(--black);
-}
-
-.nav-expand {
-  display: none;
-}
-
+.nav-expand { display: none; }
 
 @media (max-width: 480px) {
-  #navbar {
-    height: 48px;
-  }
+  #navbar ul { display: none; }
 
-  #navbar ul {
-    display: none;
-  }
-
-  #navbar ul li {
-    width: 100%;
-  }
-
-  #navbar .nav-item-container:focus-within button {
-    background-color: orange;
+  #navbar .nav-item-container:focus-within button.nav-expand {
+    background-color: var(--accent-color);
   }
 
   #navbar .nav-item-container:focus-within ul {
     display: flex;
     flex-direction: column;
     align-items: end;
-    background-color: white;
+    background-color: var(--accent-color);
     margin-top: calc(var(--spacing) * 3);
-    box-shadow: 0 0 0 var(--spacing) white, 0 0 var(--spacing) var(--spacing) rgba(0,0,0,.3);
+    box-shadow: 0 0 0 var(--spacing) var(--accent-color), 0 0 var(--spacing) var(--spacing) rgba(0,0,0,.3);
     border-radius: .2rem;
   }
 
   .nav-expand {
     display: block;
     margin-left: auto;
-    width: 48px;
-    height: 48px;
-    border: none;
-    border-radius: var(--spacing);
+    width: calc(var(--spacing) * 6);
+    height: calc(var(--spacing) * 6);
     cursor: pointer;
-    background-color: white;
-    box-shadow: inset 0 0 0 2px var(--black);
   }
 }
 
 @media (min-width: 1200px) {
-  body {
-    flex-direction: row !important;
-  }
+  body { flex-direction: row !important; }
 
   #navbar {
     flex-direction: column;
@@ -103,11 +84,5 @@
     margin-top: var(--spacing);
   }
 
-  #navbar ul li {
-    width: 100%;
-  }
-
-  #navbar #logo {
-    height: unset;
-  }
+  #navbar #logo { height: unset; }
 }
