--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -1,6 +1,29 @@
 .icon-btn {
   border: none;
-  font-size: 24px;
+  font-size: calc(var(--spacing) * 3);
   background-color: transparent;
-  color: var(--black);
+  color: var(--white);
+  opacity: .5;
+  padding: calc(var(--spacing));
 }
+
+.icon-btn:hover, .icon-btn:focus {
+  box-shadow: none !important;
+  opacity: 1;
+}
+
+button:not(:disabled):hover, button:not(:disabled):focus {
+  transition: .3s;
+  box-shadow: inset 0 0 0 calc(var(--spacing)/3);
+}
+
+button {
+  background-color: var(--black);
+  padding: 0 calc(var(--spacing) * 2);
+  color: var(--white);
+  border: none;
+  border-radius: calc(var(--spacing)/2);
+  transition: .3s;
+}
+
+button:disabled { opacity: .6; }
