--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,24 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 
 @import 'components/square-cards.css';
 @import 'components/navbar.css';
 @import 'components/btn.css';
 @import 'components/window.css';
 
+@font-face {
+  font-family: NikkyouSans;
+  src: url("fonts/NikkyouSans-mLKax.ttf");
+}
+
 :root {
-  --black: rgb(90,90,90);
+  /* --black: #444c55; */
+  --black: rgb(80,80,80);
   --spacing: 8px;
+  --accent-color: darkcyan;
+  /* --accent-color: firebrick; */
+  --white: rgb(230,230,230);
 }
 
 body {
@@ -29,14 +39,29 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-image: linear-gradient(0deg, rgba(230, 230, 230, 1) 10%, rgba(255, 255, 255, 0.7) 40%), url('../images/IMG_20210101_071313.jpg') !important;
-  background-color: rgb(230, 230, 230);
+  background-image: linear-gradient(0deg, rgba(230, 230, 230, 1) 10%, rgba(255, 255, 255, 0.4) 40%), url('../images/IMG_20210101_071313.jpg');
+  background-color: var(--white);
   background-size: cover;
   background-position: center;
 }
 
 h1 {
   margin: 0;
+  padding: 0;
+  height: 0;
+  width: 0;
+  overflow: hidden;
+}
+
+h2 {
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+  letter-spacing: .2rem;
+}
+
+h2, h3, h4, button {
+  font-family: "Nova Square";
 }
 
 a {
@@ -46,4 +71,28 @@ a {
 img {
   height: 100%;
   width: auto;
+}
+
+/* scrollbar */
+/* width */
+::-webkit-scrollbar {
+  width: var(--spacing);
+  height: var(--spacing);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: whitesmoke;
+  border-radius: calc(var(--spacing)/2);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: lightgray;
+  border-radius: calc(var(--spacing)/2);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: dimgray;
 }
