--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-image: linear-gradient(0deg, rgba(230, 230, 230, 1) 10%, rgba(255, 255, 255, 0.4) 40%), url('../images/IMG_20210101_071313.jpg');
+  background-image: linear-gradient(0deg, rgba(230, 230, 230, 1) 10%, rgba(255, 255, 255, 0.4) 40%), url('../images/IMG_20210101_071313.webp');
   background-color: var(--white);
   background-size: cover;
   background-position: center;
