--- a/css/components/window.css
+++ b/css/components/window.css
@@ -7,6 +7,7 @@
 
 #windows-container .window-container:not(:only-child):first-child {
   animation: none;
+  cursor: pointer;
 }
 
 #windows-container .window-container:not(:only-child):first-child .window-content {
