--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@
 }
 
 body {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   margin: 0;
